support array of events in addEvent
